--- a/Celtics Nuts & Cia/index.html
+++ b/Celtics Nuts & Cia/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><h1 class="BemVindo">Celtics Nuts & Cia.</h1></li>
                 <li class="liOrnament"><a class="menuLink" href="../Celtics Nuts & Cia/index.html">Home</a></li>
-                <li class="liOrnament"><a class="menuLink" href="../Celtics Nuts & Cia/produtos.php">Produtos</a></li>
+                <li class="liOrnament"><a class="menuLink" href="../Celtics Nuts & Cia/index.php">Produtos</a></li>
             </ul>
         </nav>
     </div>
@@ -33,7 +33,10 @@
             <img src="../imagens/img1.jpg" alt="" class="card-img-top">
             <div class="card-body text-center">
               <div class="card-title">
-                MIX GLACEADO
+                NOZES VARIADAS
+              </div>
+              <div>
+                R$29,99
               </div>
               <a href="" class="btn btn-danger">Compre</a>
             </div>
@@ -44,24 +47,13 @@
 
         <div class="item">
           <div class="card">
-            <img src="../imagens/img2.jpg" alt="" class="card-img-top">
+            <img src="../imagens/img1.jpg" alt="" class="card-img-top">
             <div class="card-body text-center">
               <div class="card-title">
                 NOZES VARIADAS
               </div>
-              <a href="" class="btn btn-danger">Compre</a>
-            </div>
-          </div>
-          <!--O card termina aqui-->
-        </div>
-        <!--O item termina aqui-->
-
-        <div class="item">
-          <div class="card">
-            <img src="../imagens/img3.jpg" alt="" class="card-img-top">
-            <div class="card-body text-center">
-              <div class="card-title">
-                LOJINHA
+              <div>
+                R$29,99
               </div>
               <a href="" class="btn btn-danger">Compre</a>
             </div>
@@ -72,10 +64,13 @@
 
         <div class="item">
           <div class="card">
-            <img src="../imagens/img4.jpg" alt="" class="card-img-top">
+            <img src="../imagens/img1.jpg" alt="" class="card-img-top">
             <div class="card-body text-center">
               <div class="card-title">
-                SAQUINHOS
+                NOZES VARIADAS
+              </div>
+              <div>
+                R$29,99
               </div>
               <a href="" class="btn btn-danger">Compre</a>
             </div>
@@ -86,10 +81,30 @@
 
         <div class="item">
           <div class="card">
-            <img src="../imagens/celticsNuts&Cia.PNG" alt="" class="card-img-top">
+            <img src="../imagens/img1.jpg" alt="" class="card-img-top">
             <div class="card-body text-center">
               <div class="card-title">
-                NUTS
+                NOZES VARIADAS
+              </div>
+              <div>
+                R$29,99
+              </div>
+              <a href="" class="btn btn-danger">Compre</a>
+            </div>
+          </div>
+          <!--O card termina aqui-->
+        </div>
+        <!--O item termina aqui-->
+
+        <div class="item">
+          <div class="card">
+            <img src="../imagens/img1.jpg" alt="" class="card-img-top">
+            <div class="card-body text-center">
+              <div class="card-title">
+                NOZES VARIADAS
+              </div>
+              <div>
+                R$29,99
               </div>
               <a href="" class="btn btn-danger">Compre</a>
             </div>
@@ -131,8 +146,7 @@
 
   <!-- Rodapé -->
   <footer>
-    <p class="registrado">© 2023 Celtics Nuts & Cia.</p>
+    <p class="registrado"><a href="../Celtics Nuts & Cia/contato.php">© 2023 Celtics Nuts & Cia.</a></p>
   </footer>
-
 </body>
 </html>
